Snapshot release