@@ -1,20 +1,16 @@
 package com.fmg1925.nofilllimit.mixin;
 
-import net.minecraft.block.pattern.CachedBlockPosition;
-import net.minecraft.command.argument.BlockStateArgument;
-import net.minecraft.server.command.FillCommand;
-import net.minecraft.server.command.ServerCommandSource;
-import net.minecraft.text.ClickEvent;
-import net.minecraft.text.HoverEvent;
-import net.minecraft.text.Style;
-import net.minecraft.text.Text;
-import net.minecraft.text.MutableText;
-import net.minecraft.util.Formatting;
-import net.minecraft.util.math.BlockBox;
-import net.minecraft.world.rule.GameRule;
-import net.minecraft.world.rule.GameRules;
+import net.minecraft.commands.CommandSourceStack;
+import net.minecraft.commands.arguments.blocks.BlockInput;
+import net.minecraft.network.chat.ClickEvent;
+import net.minecraft.network.chat.Component;
+import net.minecraft.network.chat.HoverEvent;
+import net.minecraft.server.commands.FillCommand;
+import net.minecraft.world.level.block.state.pattern.BlockInWorld;
+import net.minecraft.world.level.levelgen.structure.BoundingBox;
 import org.jspecify.annotations.Nullable;
 import org.spongepowered.asm.mixin.Mixin;
+import org.spongepowered.asm.mixin.Unique;
 import org.spongepowered.asm.mixin.injection.*;
 import org.spongepowered.asm.mixin.injection.callback.CallbackInfoReturnable;
 
@@ -22,82 +18,94 @@ import java.util.function.Predicate;
 
 @Mixin(FillCommand.class)
 public class NoFillLimitMixin {
-	@Redirect(
-			method = "execute",
-			at = @At(
-					value = "INVOKE",
-					target = "Lnet/minecraft/world/rule/GameRules;getValue(Lnet/minecraft/world/rule/GameRule;)Ljava/lang/Object;"
-			)
-	)
-	private static Object noFillLimit(GameRules ignore, GameRule rule) {
-		 return Integer.MAX_VALUE;
-	 }
-
-	@ModifyVariable(method = "execute", at = @At("HEAD"), argsOnly = true)
-	private static BlockBox modifyCoords(BlockBox range, ServerCommandSource source) {
-		int minBuildY = source.getWorld().getBottomY();
-		int maxBuildY = source.getWorld().getLogicalHeight() - Math.abs(source.getWorld().getBottomY()) - 1;
-
-		int x1 = range.getMinX();
-		int x2 = range.getMaxX();
-		int y1 = Math.max(minBuildY, range.getMinY());
-		int y2 = Math.min(maxBuildY, range.getMaxY());
-		int z1 = range.getMinZ();
-		int z2 = range.getMaxZ();
-		range = null;
-
-		return new BlockBox(x1, y1, z1, x2, y2, z2);
+	@ModifyVariable(
+			method = "fillBlocks",
+			at = @At("STORE"),
+			name = "limit")
+	private static int bypassBlockLimit(int originalLimit) {
+		// Sobreescribimos cualquier límite establecido por la gamerule
+		return Integer.MAX_VALUE;
 	}
 
-	@Inject(method = "execute", at = @At("HEAD"))
-	private static void mensaje(
-			ServerCommandSource source,
-			BlockBox range,
-			BlockStateArgument block,
+	@Unique
+	private static CommandSourceStack currentSource;
+
+	@Inject(method = "fillBlocks", at = @At("HEAD"))
+	private static void captureSourceContext(
+			CommandSourceStack source,
+			BoundingBox region,
+			BlockInput target,
 			@Coerce Object mode,
-			@Nullable Predicate<CachedBlockPosition> filter,
+			@Nullable Predicate<BlockInWorld> predicate,
 			boolean strict,
 			CallbackInfoReturnable<Integer> cir
 	) {
-		int x1 = range.getMinX();
-		int x2 = range.getMaxX();
-		int y1 = range.getMinY();
-		int y2 = range.getMaxY();
-		int z1 = range.getMinZ();
-		int z2 = range.getMaxZ();
+		// 1. Capturamos el origen del comando apenas entra al método
+		currentSource = source;
+	}
 
-		int width = x2 - x1 + 1;
-		int height = y2 - y1 + 1;
-		int depth = z2 - z1 + 1;
+	@ModifyVariable(
+			method = "fillBlocks",
+			at = @At(value = "INVOKE", target = "Lnet/minecraft/world/level/levelgen/structure/BoundingBox;getXSpan()I"),
+			ordinal = 0,
+			argsOnly = true)
+	private static BoundingBox clampRegion(BoundingBox originalRegion) {
+		if (currentSource == null) return originalRegion;
 
-		String cmdStart = "/tp %d %d %d".formatted(x1, y1, z1);
-		String cmdEnd = "/tp %d %d %d".formatted(x2, y2, z2);
+		int minBuildY = currentSource.getLevel().getMinY();
+		int maxBuildY = currentSource.getLevel().getMaxY();
 
-		Text hintStart = Text.literal("Tp to start");
-		Text hintEnd = Text.literal("Tp to end");
+		int x1 = originalRegion.minX();
+		int x2 = originalRegion.maxX();
+		int y1 = Math.max(minBuildY, originalRegion.minY());
+		int y2 = Math.min(maxBuildY, originalRegion.maxY());
+		int z1 = originalRegion.minZ();
+		int z2 = originalRegion.maxZ();
 
-		MutableText message = Text.literal("Filling from ")
-				.formatted(Formatting.WHITE)
+		// 3. Limpiamos la referencia para evitar fugas de memoria
+		currentSource = null;
 
-				.append(Text.literal("[%d, %d, %d]".formatted(x1, y1, z1))
-						.setStyle(Style.EMPTY
-								.withColor(Formatting.GREEN)
+		return new BoundingBox(x1, y1, z1, x2, y2, z2);
+	}
+
+	@Inject(method = "fillBlocks", at = @At("RETURN"))
+	private static void mensaje(
+			CommandSourceStack source, BoundingBox region, BlockInput target, @Coerce Object mode, @Nullable Predicate<BlockInWorld> predicate, boolean strict, CallbackInfoReturnable<Integer> cir
+	) {
+		if (cir.getReturnValue() == 0) return;
+
+		int x1 = region.minX();
+		int y1 = region.minY();
+		int z1 = region.minZ();
+		int x2 = region.maxX();
+		int y2 = region.maxY();
+		int z2 = region.maxZ();
+
+		String cmdStart = String.format("/tp %d %d %d", x1, y1, z1);
+		String cmdEnd = String.format("/tp %d %d %d", x2, y2, z2);
+
+		Component hintStart = Component.literal("Tp to start");
+		Component hintEnd = Component.literal("Tp to end");
+
+		Component message = Component.literal("Filling from ")
+				.withColor(0xFFFFFF)
+				.append(Component.literal(String.format("[%d, %d, %d]", x1, y1, z1))
+						.withStyle(style -> style
+								.withColor(0x00FF00)
 								.withClickEvent(new ClickEvent.SuggestCommand(cmdStart))
 								.withHoverEvent(new HoverEvent.ShowText(hintStart))
 						))
-
-				.append(Text.literal(" to ").formatted(Formatting.WHITE))
-
-				.append(Text.literal("[%d, %d, %d]".formatted(x2, y2, z2))
-						.setStyle(Style.EMPTY
-								.withColor(Formatting.GREEN)
+				.append(Component.literal(" to ").withColor(0xFFFFFF)
+				.append(Component.literal(String.format("[%d, %d, %d]", x2, y2, z2))
+						.withStyle(style -> style
+								.withColor(0x00FF00)
 								.withClickEvent(new ClickEvent.SuggestCommand(cmdEnd))
 								.withHoverEvent(new HoverEvent.ShowText(hintEnd))
-						));
+						)));
 
-		MutableText message2 = Text.literal("Width: %d, Height: %d, Depth: %d".formatted(width, height, depth));
+		Component message2 = Component.literal(String.format("Width: %d, Height: %d, Depth: %d", region.getXSpan(), region.getYSpan(), region.getZSpan()));
 
-		source.sendFeedback(() -> message, true);
-		source.sendFeedback(() -> message2, true);
+		source.sendSuccess(() -> message, true);
+		source.sendSuccess(() -> message2, true);
 	}
 }
